--- a/package.json
+++ b/package.json
@@ -1,27 +1,17 @@
 {
-    "name": "app-service-hello-world",
-    "description": "Simple Hello World Node.js sample for Azure App Service",
-    "version": "0.0.1",
-    "private": true,
-    "license": "MIT",
-    "author": "Microsoft",
-    "engines": {
-        "node": ">=6.9.1"
-    },
-    "scripts": {
-        "start": "node index.js"
-    },
-
-    "dependencies": {
-        "bitcore-explorers": "^1.0.1",
-        "body-parser": "^1.18.2",
-        "crypto-js": "^3.1.9-1",
-        "express": "^4.16.3",
-        "file-system": "^2.2.2",
-        "formidable": "^1.2.1",
-        "fs": "0.0.1-security",
-        "multer": "^1.3.0",
-        "socket.io": "^2.1.0"
-        
-      }
+  "name": "nodejs-get-started",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "start": "node ./bin/www"
+  },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "jade": "~1.11.0",
+    "morgan": "~1.6.1",
+    "serve-favicon": "~2.3.0"
+  }
 }
